@@ -54,6 +54,8 @@ LanguageTool Change Log
      Should you need a checker without the XML-based pattern rules, extend your
      language class (e.g. 'English') with one that overwrites the getPatternRules()
      method and returns an empty list there.
+    -ManualTagger.lookup() has been replaced by ManualTagger.tag() after being
+     deprecated since the latest release
     -All static methods and fields from class 'Language' have been moved to the new
      class 'Languages'. For now, the methods/fields in class Language still exist
      but have been deprecated.
